deploy: QuantumPL/site@93dc3f8c73abb8e0074f50a9301c0852b9356f1d

--- a/index.html
+++ b/index.html
@@ -284,14 +284,14 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 </div>
 <div class="col-12 col-lg-8">
 <div class=tag-cloud>
-<a href=/bib/tag/Formal-verification/ style=font-size:1.4837542639282901rem>Formal verification</a>
-<a href=/bib/tag/Program-Proof/ style=font-size:.7rem>Program Proof</a>
-<a href=/bib/tag/Programming-Languages/ style=font-size:1.7634882688316273rem>Programming Languages</a>
-<a href=/bib/tag/Quantum-Computation/ style=font-size:1.1413875116082655rem>Quantum Computation</a>
-<a href=/bib/tag/Quantum-computing/ style=font-size:.7rem>Quantum computing</a>
-<a href=/bib/tag/Quantum-computing/ style=font-size:1.7634882688316273rem>Quantum computing</a>
-<a href=/bib/tag/quantum-programming/ style=font-size:1.1413875116082655rem>quantum programming</a>
-<a href=/bib/tag/Type-Systems/ style=font-size:1.1413875116082655rem>Type Systems</a>
+<a href=/bib/tag/Formal-verification/ style=font-size:1.1185065233535711rem>Formal verification</a>
+<a href=/bib/tag/OpenQASM/ style=font-size:.7rem>OpenQASM</a>
+<a href=/bib/tag/Programming-Languages/ style=font-size:1.4604512509375032rem>Programming Languages</a>
+<a href=/bib/tag/QASM/ style=font-size:.7rem>QASM</a>
+<a href=/bib/tag/Quantum-Computation/ style=font-size:.7rem>Quantum Computation</a>
+<a href=/bib/tag/Quantum-computing/ style=font-size:1.4604512509375032rem>Quantum computing</a>
+<a href=/bib/tag/Quantum-computing/ style=font-size:1.7495613986748855rem>Quantum computing</a>
+<a href=/bib/tag/quantum-programming/ style=font-size:.7rem>quantum programming</a>
 </div>
 </div>
 </div>
