--- a/publication-type/0/index.html
+++ b/publication-type/0/index.html
@@ -117,6 +117,12 @@ We consider a programming language that can manipulate both classical and quantu
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Cross2021/>OpenQASM 3: A broader and deeper quantum assembly language</a></h2>
+<div class=article-style>
+Quantum assembly languages are machine-independent languages that traditionally describe quantum computation in the circuit model. Open quantum assembly language (OpenQASM 2) was proposed as an imperative programming language for quantum circuits …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Chareton2020/>A Deductive Verification Framework for Circuit-Building Quantum Programs</a></h2>
 <div class=article-style>
 While recent progress in quantum hardware open the door for significant speedup in certain key areas, quantum algorithms are still hard to implement right, and the validation of such quantum programs is a challenge. Early attempts either suffer from …
