--- a/publication/Amy2019b/index.html
+++ b/publication/Amy2019b/index.html
@@ -150,6 +150,21 @@ Conference paper
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/Quantum-computing/>Quantum computing</a>
+<a class="badge badge-light" href=/bib/tag/OpenQASM/>OpenQASM</a>
+<a class="badge badge-light" href=/bib/tag/QASM/>QASM</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
+<li><a href=/bib/publication/Cross2017/>Open Quantum Assembly Language</a></li>
+<li><a href=/bib/publication/Cross2021/>OpenQASM 3: A broader and deeper quantum assembly language</a></li>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
+<li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
