--- a/publication/Singhal2020/index.html
+++ b/publication/Singhal2020/index.html
@@ -155,15 +155,18 @@ Conference paper
 <a class="badge badge-light" href=/bib/tag/Program-Proof/>Program Proof</a>
 <a class="badge badge-light" href=/bib/tag/Programming-Languages/>Programming Languages</a>
 <a class="badge badge-light" href=/bib/tag/Semantic-Preservation/>Semantic Preservation</a>
+<a class="badge badge-light" href=/bib/tag/OpenQASM/>OpenQASM</a>
+<a class="badge badge-light" href=/bib/tag/QASM/>QASM</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-computing/>Quantum computing</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
+<li><a href=/bib/publication/Amy2019b/>Sized Types for Low-Level Quantum Metaprogramming</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
-<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
-<li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
+<li><a href=/bib/publication/Cross2017/>Open Quantum Assembly Language</a></li>
 </ul>
 </div>
 </div>
