--- a/publication/Backens2014/index.html
+++ b/publication/Backens2014/index.html
@@ -158,11 +158,11 @@ Journal article
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Amy2019b/>Sized Types for Low-Level Quantum Metaprogramming</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
+<li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Rand2020/>Gottesman Types for Quantum Programs</a></li>
-<li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
-<li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
 </ul>
 </div>
 </div>
