--- a/publication/Cross2017/index.html
+++ b/publication/Cross2017/index.html
@@ -126,7 +126,24 @@ URL
 <h3>Abstract</h3>
 <p class=pub-abstract>This document describes a quantum assembly language (QASM) called OpenQASM that is used to implement experiments with low depth quantum circuits. OpenQASM represents universal physical circuits over the CNOT plus SU(2) basis with straight-line code that includes measurement, reset, fast feedback, and gate subroutines. The simple text language can be written by hand or by higher level tools and may be executed on the IBM Q Experience.</p>
 <div class=space-below></div>
-<div class=article-style><p>OpenQASM 2.0</p>
+<div class=article-style><p>OpenQASM 2.0, see [<a href=../Cross2021>Cross2021</a>] for OpenQASM 3</p>
+</div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/QASM/>QASM</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-Assembly-Language/>Quantum Assembly Language</a>
+<a class="badge badge-light" href=/bib/tag/OpenQASM/>OpenQASM</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-computing/>Quantum computing</a>
+<a class="badge badge-light" href=/bib/tag/quantum-information/>quantum information</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Cross2021/>OpenQASM 3: A broader and deeper quantum assembly language</a></li>
+<li><a href=/bib/publication/Amy2019b/>Sized Types for Low-Level Quantum Metaprogramming</a></li>
+<li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
+<li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
+</ul>
 </div>
 </div>
 </div>
