--- a/publication/Hietala2021a/index.html
+++ b/publication/Hietala2021a/index.html
@@ -163,10 +163,10 @@ Conference paper
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
+<li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
-<li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
 </ul>
 </div>
 </div>
