--- a/publication/Singhal2021/index.html
+++ b/publication/Singhal2021/index.html
@@ -167,9 +167,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
+<li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Rand2020/>Gottesman Types for Quantum Programs</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
-<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 </ul>
 </div>
 </div>
