deploy: QuantumPL/site@b1e8f1036593e095584b9231fdde64fe1ce3eed9

--- a/404.html
+++ b/404.html
@@ -100,8 +100,9 @@
 <p>Perhaps you were looking for one of these?</p>
 <h2>Latest</h2>
 <ul>
-<li><a href=/bib/about/>About</a></li>
 <li><a href=/bib/publication/>Publications</a></li>
+<li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
+<li><a href=/bib/about/>About</a></li>
 <li><a href=/bib/publication/Chareton2021a/>Formal Methods for Quantum Programs: A Survey</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
@@ -109,7 +110,6 @@
 <li><a href=/bib/post/gh-org-ui/>GitHub Org and Better UI</a></li>
 <li><a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a></li>
 <li><a href=/bib/publication/Kaarsgaard2021/>Quantum Information Effects</a></li>
-<li><a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a></li>
 </ul>
 </div>
 </div>
