deploy: QuantumPL/site@ecd9881370c267e26699ec5ceeb697078031d4b4

--- a/publication/index.html
+++ b/publication/index.html
@@ -168,6 +168,38 @@ Software
 </div>
 </div>
 <div id=container-publications>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Lewis2021/>Formal Verification of Quantum Programs: Theory, Tools and Challenges</a>
+</div>
+<a href=/bib/publication/Lewis2021/ class=summary-link>
+<div class=article-style>
+Over the past 27 years, quantum computing has seen a huge rise in interest from both academia and industry. At the current rate, …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Marco-Lewis/>Marco Lewis</a></span>, <span>
+<a href=/bib/author/Sadegh-Soudjani/>Sadegh Soudjani</a></span>, <span>
+<a href=/bib/author/Paolo-Zuliani/>Paolo Zuliani</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Lewis2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.01320 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
 <div class="media stream-item">
 <div class=media-body>
