--- a/404.html
+++ b/404.html
@@ -101,6 +101,7 @@
 <h2>Latest</h2>
 <ul>
 <li><a href=/bib/publication/>Publications</a></li>
+<li><a href=/bib/publication/Lewis2021/>Formal Verification of Quantum Programs: Theory, Tools and Challenges</a></li>
 <li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
 <li><a href=/bib/about/>About</a></li>
 <li><a href=/bib/publication/Chareton2021a/>Formal Methods for Quantum Programs: A Survey</a></li>
@@ -109,7 +110,6 @@
 <li><a href=/bib/post/>Latest News</a></li>
 <li><a href=/bib/post/gh-org-ui/>GitHub Org and Better UI</a></li>
 <li><a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a></li>
-<li><a href=/bib/publication/Kaarsgaard2021/>Quantum Information Effects</a></li>
 </ul>
 </div>
 </div>
