--- a/index.html
+++ b/index.html
@@ -159,6 +159,25 @@ arXiv
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
+<a href=/bib/author/Marco-Lewis/>Marco Lewis</a></span>, <span>
+<a href=/bib/author/Sadegh-Soudjani/>Sadegh Soudjani</a></span>, <span>
+<a href=/bib/author/Paolo-Zuliani/>Paolo Zuliani</a></span>
+</span>
+(2021).
+<a href=/bib/publication/Lewis2021/>Formal Verification of Quantum Programs: Theory, Tools and Challenges</a>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Lewis2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.01320 target=_blank rel=noopener>
+arXiv
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
 <a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
 <a href=/bib/author/Dongho-Lee/>Dongho Lee</a></span>, <span>
@@ -211,31 +230,6 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://dalspace.library.dal.ca/handle/10222/80771 target=_blank rel=noopener>
 URL
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Li-Zhou/>Li Zhou</a></span>, <span>
-<a href=/bib/author/Gilles-Barthe/>Gilles Barthe</a></span>, <span>
-<a href=/bib/author/Justin-Hsu/>Justin Hsu</a></span>, <span>
-<a href=/bib/author/Mingsheng-Ying/>Mingsheng Ying</a></span>, <span>
-<a href=/bib/author/Nengkun-Yu/>Nengkun Yu</a></span>
-</span>
-(2021).
-<a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a>.
-<em>Proceedings of the 36th Annual ACM/IEEE Symposium on Logic in Computer Science</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Zhou2021/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1109/LICS52264.2021.9470673 target=_blank rel=noopener>
-DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2102.00329 target=_blank rel=noopener>
-arXiv
 </a>
 </p>
 </div>
