--- a/publication-type/0/index.html
+++ b/publication-type/0/index.html
@@ -129,6 +129,12 @@ Quantum assembly languages are machine-independent languages that traditionally 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Vandewetering2020/>ZX-calculus for the working quantum computer scientist</a></h2>
+<div class=article-style>
+The ZX-calculus is a graphical language for reasoning about quantum computation that has recently seen an increased usage in a variety of areas such as quantum circuit optimisation, surface codes and lattice surgery, measurement-based quantum …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Chareton2020/>A Deductive Verification Framework for Circuit-Building Quantum Programs</a></h2>
 <div class=article-style>
 While recent progress in quantum hardware open the door for significant speedup in certain key areas, quantum algorithms are still hard to implement right, and the validation of such quantum programs is a challenge. Early attempts either suffer from …
