--- a/publication/Chardonnet2021/index.html
+++ b/publication/Chardonnet2021/index.html
@@ -161,6 +161,7 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
+<li><a href=/bib/publication/Vandewetering2020/>ZX-calculus for the working quantum computer scientist</a></li>
 <li><a href=/bib/publication/Staton2015/>Algebraic Effects, Linearity, and Quantum Programming Languages</a></li>
 <li><a href=/bib/publication/Vizzotto2009/>Reasoning about General Quantum Programs over Mixed States</a></li>
 </ul>
