--- a/publication/index.html
+++ b/publication/index.html
@@ -718,6 +718,36 @@ URL
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2020">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Vandewetering2020/>ZX-calculus for the working quantum computer scientist</a>
+</div>
+<a href=/bib/publication/Vandewetering2020/ class=summary-link>
+<div class=article-style>
+The ZX-calculus is a graphical language for reasoning about quantum computation that has recently seen an increased usage in a variety …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/John-van-de-Wetering/>John van de Wetering</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Vandewetering2020/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2012.13966 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2020">
 <div class="media stream-item">
 <div class=media-body>
