deploy: QuantumPL/site@51e4cfa043dcce70c820b9cd500045af1ef70be1

--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -213,6 +213,12 @@ We present IQu, namely a quantum programming language that extends Reynold's Ide
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Huang2019/>QDB: From Quantum Algorithms Towards Correct Quantum Programs</a></h2>
+<div class=article-style>
+With the advent of small-scale prototype quantum computers, researchers can now code and run quantum algorithms that were previously proposed but not fully implemented. In support of this growing interest in quantum computing experimentation, …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Rand2019/>ReQWIRE: Reasoning about Reversible Quantum Circuits</a></h2>
 <div class=article-style>
 Common quantum algorithms make heavy use of ancillae: scratch qubits that are initialized at some state and later returned to that state and discarded. Existing quantum circuit languages let programmers assert that a qubit has been returned to the …
