--- a/publication-type/6/index.html
+++ b/publication-type/6/index.html
@@ -105,6 +105,12 @@ In physics, Feynman diagrams are used to reason about quantum processes. In the 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Jorrand2009/>Abstract Interpretation Techniques for Quantum Computation</a></h2>
+<div class=article-style>
+In this chapter, we present applications of abstract interpretation techniques in quantum computing. Quantum computing is a now well-established domain of computer science, and the recent developments of semantic techniques show the vitality of this …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Danos2009/>Extended Measurement Calculus</a></h2>
 <div class=article-style>
 Measurement-based quantum computation (MBQC) has emerged as a new approach to quantum computation where the notion of measurement is the main driving force of computation. This is in contrast with the more traditional circuit model that takes unitary …
