--- a/publication/index.html
+++ b/publication/index.html
@@ -1763,6 +1763,37 @@ DOI
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Huang2019/>QDB: From Quantum Algorithms Towards Correct Quantum Programs</a>
+</div>
+<a href=/bib/publication/Huang2019/ class=summary-link>
+<div class=article-style>
+With the advent of small-scale prototype quantum computers, researchers can now code and run quantum algorithms that were previously …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Yipeng-Huang/>Yipeng Huang</a></span>, <span>
+<a href=/bib/author/Margaret-Martonosi/>Margaret Martonosi</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Huang2019/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4230/OASIcs.PLATEAU.2018.4 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-7 year-2018">
 <div class="media stream-item">
 <div class=media-body>
@@ -3344,6 +3375,37 @@ DOI
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-6 year-2009">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Jorrand2009/>Abstract Interpretation Techniques for Quantum Computation</a>
+</div>
+<a href=/bib/publication/Jorrand2009/ class=summary-link>
+<div class=article-style>
+In this chapter, we present applications of abstract interpretation techniques in quantum computing. Quantum computing is a now …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Philippe-Jorrand/>Philippe Jorrand</a></span>, <span>
+<a href=/bib/author/Simon-Perdrix/>Simon Perdrix</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Jorrand2009/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/CBO9781139193313.007 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2009">
 <div class="media stream-item">
 <div class=media-body>
@@ -3536,6 +3598,41 @@ DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=http://www.dcs.gla.ac.uk/~simon/quantum/ target=_blank rel=noopener>
 URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2006">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Vizzotto2006/>Structuring quantum effects: superoperators as arrows</a>
+</div>
+<a href=/bib/publication/Vizzotto2006/ class=summary-link>
+<div class=article-style>
+We show that the model of quantum computation based on density matrices and superoperators can be decomposed into a pure classical …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Juliana-Kaizer-Vizzotto/>Juliana Kaizer Vizzotto</a></span>, <span>
+<a href=/bib/author/Thorsten-Altenkirch/>Thorsten Altenkirch</a></span>, <span>
+<a href=/bib/author/Amr-Sabry/>Amr Sabry</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Vizzotto2006/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/S0960129506005287 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/quant-ph/0501151 target=_blank rel=noopener>
+arXiv
 </a>
 </div>
 </div>
