--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -231,6 +231,12 @@ The field of quantum programming languages is developing rapidly and there is a 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Vizzotto2006/>Structuring quantum effects: superoperators as arrows</a></h2>
+<div class=article-style>
+We show that the model of quantum computation based on density matrices and superoperators can be decomposed into a pure classical (functional) part and an effectful part modelling probabilities and measurement. The effectful part can be modelled …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Selinger2006/>A Lambda Calculus for Quantum Computation with Classical Control</a></h2>
 <div class=article-style>
 In this paper we develop a functional programming language for quantum computers by extending the simply-typed lambda calculus with quantum types and operations. The design of this language adheres to the 'quantum data, classical control' paradigm, …
