deploy: QuantumPL/site@0e780c7f18264184c93e16db9810cbebc477f985

--- a/publication/index.html
+++ b/publication/index.html
@@ -2576,6 +2576,36 @@ DOI
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2015">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Honda2015/>Analysis of Quantum Entanglement in Quantum Programs using Stabilizer Formalism</a>
+</div>
+<a href=/bib/publication/Honda2015/ class=summary-link>
+<div class=article-style>
+Quantum entanglement plays an important role in quantum computation and communication. It is necessary for many protocols and …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Kentaro-Honda/>Kentaro Honda</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Honda2015/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.195.19 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-7 year-2015">
 <div class="media stream-item">
 <div class=media-body>
