--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -285,6 +285,12 @@ This paper introduces QWIRE (\"choir\"), a language for defining quantum circuit
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Honda2015/>Analysis of Quantum Entanglement in Quantum Programs using Stabilizer Formalism</a></h2>
+<div class=article-style>
+Quantum entanglement plays an important role in quantum computation and communication. It is necessary for many protocols and computations, but causes unexpected disturbance of computational states. Hence, static analysis of quantum entanglement in …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Boender2015/>Formalization of Quantum Protocols using Coq</a></h2>
 <div class=article-style>
 Quantum Information Processing, which is an exciting area of research at the intersection of physics and computer science, has great potential for influencing the future development of information processing systems. The building of practical, …
