deploy: QuantumPL/site@51dba8dedf5a5f3a93eebce884cc16be9a97e9c5

--- a/index.html
+++ b/index.html
@@ -286,11 +286,11 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 <div class=tag-cloud>
 <a href=/bib/tag/Formal-verification/ style=font-size:1.1185065233535711rem>Formal verification</a>
 <a href=/bib/tag/OpenQASM/ style=font-size:.7rem>OpenQASM</a>
-<a href=/bib/tag/Programming-Languages/ style=font-size:1.4604512509375032rem>Programming Languages</a>
+<a href=/bib/tag/Programming-Languages/ style=font-size:1.7495613986748855rem>Programming Languages</a>
 <a href=/bib/tag/QASM/ style=font-size:.7rem>QASM</a>
-<a href=/bib/tag/Quantum-Computation/ style=font-size:.7rem>Quantum Computation</a>
-<a href=/bib/tag/Quantum-computing/ style=font-size:1.4604512509375032rem>Quantum computing</a>
+<a href=/bib/tag/Quantum-Computation/ style=font-size:1.4604512509375032rem>Quantum Computation</a>
 <a href=/bib/tag/Quantum-computing/ style=font-size:1.7495613986748855rem>Quantum computing</a>
+<a href=/bib/tag/Quantum-computing/ style=font-size:1.4604512509375032rem>Quantum computing</a>
 <a href=/bib/tag/quantum-programming/ style=font-size:.7rem>quantum programming</a>
 </div>
 </div>
