--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -285,6 +285,12 @@ This paper introduces QWIRE (\"choir\"), a language for defining quantum circuit
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/DalLago2017/>The Geometry of Parallelism: Classical, Probabilistic, and Quantum Effects</a></h2>
+<div class=article-style>
+We introduce a Geometry of Interaction model for higher-order quantum computation, and prove its adequacy for a fully fledged quantum programming language in which entanglement, duplication, and recursion are all available. This model is an instance …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Honda2015/>Analysis of Quantum Entanglement in Quantum Programs using Stabilizer Formalism</a></h2>
 <div class=article-style>
 Quantum entanglement plays an important role in quantum computation and communication. It is necessary for many protocols and computations, but causes unexpected disturbance of computational states. Hence, static analysis of quantum entanglement in …
@@ -309,6 +315,12 @@ We develop a new framework of algebraic theories with linear parameters, and use
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Pagani2014/>Applying Quantitative Semantics to Higher-Order Quantum Computing</a></h2>
+<div class=article-style>
+Finding a denotational semantics for higher order quantum computation is a long-standing problem in the semantics of quantum programming languages. Most past approaches to this problem fell short in one way or another, either limiting the language to …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></h2>
 <div class=article-style>
 Quipper is a recently developed programming language for expressing quantum computations. This paper gives a brief tutorial introduction to the language, through a demonstration of how to make use of some of its key features. We illustrate many of …
@@ -330,6 +342,12 @@ This paper gives an introduction to and overview of the functional quantum progr
 <h2><a href=/bib/publication/Vizzotto2009/>Reasoning about General Quantum Programs over Mixed States</a></h2>
 <div class=article-style>
 In this work we present a functional programming language for quantum computation over mixed states. More interestingly, we develop a set of equations for the resulting programming language, proposing the first framework for equational reasoning …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Gay2008/>QMC: A Model Checker for Quantum Systems</a></h2>
+<div class=article-style>
+The novel field of quantum computation and quantum information has been growing at a rapid rate; the study of quantum information in particular has led to the emergence of communication and cryptographic protocols with no classical analogues. Quantum …
 </div>
 </div>
 <div>
