--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -171,6 +171,12 @@ We introduce the notion of linear ranking super-martingale (LRSM) for quantum pr
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></h2>
+<div class=article-style>
+While much of the current study on quantum computation employs low-level formalisms such as quantum circuits, several high-level languages/calculi have been recently proposed aiming at structured quantum programming. The current work contributes to …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Valiron2015/>Programming the Quantum Future</a></h2>
 <div class=article-style>
 The Quipper language offers a unified general-purpose programming framework for quantum computation.
