--- a/publication/Green2013a/index.html
+++ b/publication/Green2013a/index.html
@@ -154,6 +154,21 @@ Conference paper
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/Quantum-Computation/>Quantum Computation</a>
+<a class="badge badge-light" href=/bib/tag/Programming-Languages/>Programming Languages</a>
+<a class="badge badge-light" href=/bib/tag/Quipper/>Quipper</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
+<li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
+<li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
+<li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
+<li><a href=/bib/publication/Selinger2004/>A Brief Survey of Quantum Programming Languages</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
