--- a/publication/Lee2021/index.html
+++ b/publication/Lee2021/index.html
@@ -158,6 +158,12 @@ Conference paper
 <a class="badge badge-light" href=/bib/tag/Operational-semantics/>Operational semantics</a>
 <a class="badge badge-light" href=/bib/tag/Quantum-circuit-description-language/>Quantum circuit description language</a>
 </div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
