--- a/publication/Rios2021/index.html
+++ b/publication/Rios2021/index.html
@@ -141,7 +141,7 @@ Thesis
 <div class=article-style></div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/Quantum-programming-language/>Quantum programming language</a>
-<a class="badge badge-light" href=/bib/tag/Categorical-model/>Categorical model</a>
+<a class="badge badge-light" href=/bib/tag/categorical-model/>categorical model</a>
 <a class="badge badge-light" href=/bib/tag/Quantum-circuit/>Quantum circuit</a>
 <a class="badge badge-light" href=/bib/tag/Proto-Quipper-M/>Proto-Quipper-M</a>
 <a class="badge badge-light" href=/bib/tag/Category-Theory/>Category Theory</a>
