--- a/publication/Selinger2004/index.html
+++ b/publication/Selinger2004/index.html
@@ -150,6 +150,23 @@ Conference paper
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/Quantum-Computation/>Quantum Computation</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-Algorithm/>Quantum Algorithm</a>
+<a class="badge badge-light" href=/bib/tag/Linear-Logic/>Linear Logic</a>
+<a class="badge badge-light" href=/bib/tag/Denotational-semantics/>Denotational semantics</a>
+<a class="badge badge-light" href=/bib/tag/lambda-calculus/>lambda calculus</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
+<li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
+<li><a href=/bib/publication/DalLago2017/>The Geometry of Parallelism: Classical, Probabilistic, and Quantum Effects</a></li>
+<li><a href=/bib/publication/Vizzotto2009/>Reasoning about General Quantum Programs over Mixed States</a></li>
+<li><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
