--- a/publication/index.html
+++ b/publication/index.html
@@ -2348,6 +2348,76 @@ DOI
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2017">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a>
+</div>
+<a href=/bib/publication/Hasuo2017/ class=summary-link>
+<div class=article-style>
+While much of the current study on quantum computation employs low-level formalisms such as quantum circuits, several high-level …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Ichiro-Hasuo/>Ichiro Hasuo</a></span>, <span>
+<a href=/bib/author/Naohiko-Hoshino/>Naohiko Hoshino</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Hasuo2017/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1016/j.apal.2016.10.010 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1605.05079 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2017">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/DalLago2017/>The Geometry of Parallelism: Classical, Probabilistic, and Quantum Effects</a>
+</div>
+<a href=/bib/publication/DalLago2017/ class=summary-link>
+<div class=article-style>
+We introduce a Geometry of Interaction model for higher-order quantum computation, and prove its adequacy for a fully fledged quantum …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Ugo-Dal-Lago/>Ugo Dal Lago</a></span>, <span>
+<a href=/bib/author/Claudia-Faggian/>Claudia Faggian</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
+<a href=/bib/author/Akira-Yoshimizu/>Akira Yoshimizu</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/DalLago2017/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3009837.3009859 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1610.09629 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2017">
 <div class="media stream-item">
 <div class=media-body>
@@ -2857,6 +2927,41 @@ We extract a novel quantum programming paradigm - superposition of programs - fr
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1402.5172 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2014">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Pagani2014/>Applying Quantitative Semantics to Higher-Order Quantum Computing</a>
+</div>
+<a href=/bib/publication/Pagani2014/ class=summary-link>
+<div class=article-style>
+Finding a denotational semantics for higher order quantum computation is a long-standing problem in the semantics of quantum …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Michele-Pagani/>Michele Pagani</a></span>, <span>
+<a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Pagani2014/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/2535838.2535879 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1311.2290 target=_blank rel=noopener>
 arXiv
 </a>
 </div>
@@ -3529,6 +3634,41 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/0808.1023 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2008">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Gay2008/>QMC: A Model Checker for Quantum Systems</a>
+</div>
+<a href=/bib/publication/Gay2008/ class=summary-link>
+<div class=article-style>
+The novel field of quantum computation and quantum information has been growing at a rapid rate; the study of quantum information in …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Simon-J.-Gay/>Simon J. Gay</a></span>, <span>
+<a href=/bib/author/Rajagopal-Nagarajan/>Rajagopal Nagarajan</a></span>, <span>
+<a href=/bib/author/Nikolaos-Papanikolaou/>Nikolaos Papanikolaou</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Gay2008/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-540-70545-1_51 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/0704.3705 target=_blank rel=noopener>
 arXiv
 </a>
 </div>
