--- a/publication/Chardonnet2021/index.html
+++ b/publication/Chardonnet2021/index.html
@@ -159,11 +159,11 @@ Conference paper
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Selinger2004/>A Brief Survey of Quantum Programming Languages</a></li>
+<li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
+<li><a href=/bib/publication/DalLago2017/>The Geometry of Parallelism: Classical, Probabilistic, and Quantum Effects</a></li>
+<li><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></li>
 <li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
-<li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
-<li><a href=/bib/publication/Vandewetering2020/>ZX-calculus for the working quantum computer scientist</a></li>
-<li><a href=/bib/publication/Staton2015/>Algebraic Effects, Linearity, and Quantum Programming Languages</a></li>
-<li><a href=/bib/publication/Vizzotto2009/>Reasoning about General Quantum Programs over Mixed States</a></li>
 </ul>
 </div>
 </div>
