--- a/publication/Rennela2020/index.html
+++ b/publication/Rennela2020/index.html
@@ -159,9 +159,9 @@ Journal article
 <ul>
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
+<li><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
-<li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 </ul>
 </div>
 </div>
