--- a/publication/Vizzotto2009/index.html
+++ b/publication/Vizzotto2009/index.html
@@ -159,11 +159,11 @@ Conference paper
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Selinger2004/>A Brief Survey of Quantum Programming Languages</a></li>
+<li><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></li>
 <li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
-<li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
-<li><a href=/bib/publication/Staton2015/>Algebraic Effects, Linearity, and Quantum Programming Languages</a></li>
 </ul>
 </div>
 </div>
