deploy: QuantumPL/site@506e371da63715bec70737e1b98b7dd4a2337f77

--- a/404.html
+++ b/404.html
@@ -101,6 +101,7 @@
 <h2>Latest</h2>
 <ul>
 <li><a href=/bib/publication/>Publications</a></li>
+<li><a href=/bib/publication/Ying2021a/>A Proof System for Disjoint Parallel Quantum Programs</a></li>
 <li><a href=/bib/publication/Lewis2021/>Formal Verification of Quantum Programs: Theory, Tools and Challenges</a></li>
 <li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
 <li><a href=/bib/about/>About</a></li>
@@ -109,7 +110,6 @@
 <li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
 <li><a href=/bib/post/>Latest News</a></li>
 <li><a href=/bib/post/gh-org-ui/>GitHub Org and Better UI</a></li>
-<li><a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a></li>
 </ul>
 </div>
 </div>
